adds boilerplate metrics

--- a/metrics.ipynb
+++ b/metrics.ipynb
@@ -237,11 +237,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "add_model_to_performance_csv(\"predictions/bert_predictions.csv\", \"model_performance.csv\", \"bert-based-case\")"
+    "add_model_to_performance_csv(\"predictions/boilerplate_predictions.csv\", \"model_performance.csv\", \"boilerplate\")"
    ]
   },
   {
