adds roberta metrics

--- a/metrics.ipynb
+++ b/metrics.ipynb
@@ -241,7 +241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "add_model_to_performance_csv(\"predictions/boilerplate_predictions.csv\", \"model_performance.csv\", \"boilerplate\")"
+    "add_model_to_performance_csv(\"predictions/roberta_predictions.csv\", \"model_performance.csv\", \"roberta\")"
    ]
   },
   {
