--- a/metrics.ipynb
+++ b/metrics.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,11 +83,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "C:\\Python38\\lib\\site-packages\\torchmetrics\\utilities\\prints.py:36: UserWarning: `pos_label` automatically set 1.\n  warnings.warn(*args, **kwargs)\n"
+     ]
+    }
+   ],
    "source": [
-    "add_model_to_performance_csv(\"predictions/ernie_predictions.csv\", \"model_performance.csv\", \"ernie\")"
+    "add_model_to_performance_csv(\"predictions/notext_predictions.csv\", \"model_performance.csv\", \"notext\")"
    ]
   },
   {
